Removed unused classes and added HandEvalTests